--- a/frontend/src/css/signup.css
+++ b/frontend/src/css/signup.css
@@ -27,7 +27,7 @@
     background-color:var(--background_color_secondary);
     padding:6px;
     gap:8px;
-    width:min(900px, 100%);
+    width:min(1000px, 100%);
     justify-content:center;
 }
 
@@ -51,7 +51,7 @@
     border:2px solid var(--background_color_tertiary); 
     border-radius:30px;
     margin:40px 0px 0px 0px;
-    width:min(900px,100%);
+    width:auto;
 }
 
 .signup-form label{
